@@ -1,4 +1,3 @@
-* fatal error if RMD160 missing
 * --autofix
 * pkglint <package>...
 * fix false positive warnings
